<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:paddingBottom="@dimen/vertical_margin"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <ImageView
            android:id="@+id/video_thumb"
            android:layout_width="@dimen/video_width"
            android:layout_height="@dimen/video_height"
            android:layout_gravity="center"
            android:contentDescription="@string/video_thumb_content_desc"
            android:scaleType="centerCrop"
            tools:background="@color/colorPrimaryDark"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="center"
            android:contentDescription="@string/video_play_content_desc"
            android:src="@drawable/ic_play_arrow_white_2x"/>
    </FrameLayout>

    <TextView
        android:id="@+id/video_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        style="@style/VideoTitleTheme"
        tools:text="@string/app_name"/>

</LinearLayout>